# Freelancer-Analysis-System

./:  README.md  .env  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
analysis/: data_analyzer.py
llm/: __init__.py  base_llm.py  deepseek_llm.py  ollama_llm.py  yandex_llm.py
